--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
     <!-- Header -->
     <header class="container">
-        <h1>Happy 2nd Anniversary, My Love ❤️</h1>
+        <h1>Happy 2nd Anniversary, Bengkong! ❤️</h1>
     </header>
 
     <!-- Message Section -->
@@ -280,3 +280,4 @@
     </script>
 </body>
 </html>
+
