--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             <div class="gallery-item">
                 <div class="gallery-item-inner">
                     <div class="gallery-item-front">
-                        <img src="photo1.jpg" alt="Memory 1">
+                        <img src="777777777.jpg" alt="Memory 1">
                     </div>
                     <div class="gallery-item-back" contenteditable="true">[Placeholder: Edit this text to describe Memory 1. For example: Our first date at the park, where we laughed and shared dreams.]</div>
                 </div>
@@ -280,4 +280,5 @@
     </script>
 </body>
 </html>
+
 
