--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <div class="gallery-item">
                 <div class="gallery-item-inner">
                     <div class="gallery-item-front">
-                        <img src="photo2.jpg" alt="Memory 2">
+                        <img src="2nd.jpg" alt="Memory 2">
                     </div>
                     <div class="gallery-item-back" contenteditable="true">[Placeholder: Edit this text to describe Memory 2. For example: The trip to the beach, watching the sunset together.]</div>
                 </div>
@@ -222,7 +222,7 @@
             <div class="gallery-item">
                 <div class="gallery-item-inner">
                     <div class="gallery-item-front">
-                        <img src="photo3.jpg" alt="Memory 3">
+                        <img src="3rd.jpg" alt="Memory 3">
                     </div>
                     <div class="gallery-item-back" contenteditable="true">[Placeholder: Edit this text to describe Memory 3. For example: Celebrating your birthday with a surprise cake.]</div>
                 </div>
@@ -230,7 +230,7 @@
             <div class="gallery-item">
                 <div class="gallery-item-inner">
                     <div class="gallery-item-front">
-                        <img src="photo4.jpg" alt="Memory 4">
+                        <img src="4th.jpg" alt="Memory 4">
                     </div>
                     <div class="gallery-item-back" contenteditable="true">[Placeholder: Edit this text to describe Memory 4. For example: Our cozy movie night at home.]</div>
                 </div>
@@ -238,7 +238,7 @@
             <div class="gallery-item">
                 <div class="gallery-item-inner">
                     <div class="gallery-item-front">
-                        <img src="photo5.jpg" alt="Memory 5">
+                        <img src="5th.jpg" alt="Memory 5">
                     </div>
                     <div class="gallery-item-back" contenteditable="true">[Placeholder: Edit this text to describe Memory 5. For example: Hiking that mountain trail, hand in hand.]</div>
                 </div>
@@ -280,5 +280,6 @@
     </script>
 </body>
 </html>
+
 
 
