--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     <div class="gallery-item-front">
                         <img src="777777777.jpg" alt="Memory 1">
                     </div>
-                    <div class="gallery-item-back" contenteditable="true">[Placeholder: Edit this text to describe Memory 1. For example: Our first date at the park, where we laughed and shared dreams.]</div>
+                    <div class="gallery-item-back" contenteditable="true">[Naks, 2nd time na pumunta sa iskol na kunware mag kaklase? pero nag iiyotan HAHAHA]</div>
                 </div>
             </div>
             <div class="gallery-item">
@@ -241,7 +241,7 @@
                     <div class="gallery-item-front">
                         <img src="2nd.jpg" alt="Memory 2">
                     </div>
-                    <div class="gallery-item-back" contenteditable="true">[Placeholder: Edit this text to describe Memory 2. For example: The trip to the beach, watching the sunset together.]</div>
+                    <div class="gallery-item-back" contenteditable="true">[Ukay When? Ganda mo jan kahit maghapon mo lang bitbit yang bulaklak HAHA]</div>
                 </div>
             </div>
             <div class="gallery-item">
@@ -249,7 +249,7 @@
                     <div class="gallery-item-front">
                         <img src="3rd.jpg" alt="Memory 3">
                     </div>
-                    <div class="gallery-item-back" contenteditable="true">[Placeholder: Edit this text to describe Memory 3. For example: Celebrating your birthday with a surprise cake.]</div>
+                    <div class="gallery-item-back" contenteditable="true">[First Sambokojin experience na busog sa discount busog din ang tiyan, UULITIN PO!]</div>
                 </div>
             </div>
             <div class="gallery-item">
@@ -257,7 +257,7 @@
                     <div class="gallery-item-front">
                         <img src="4th.jpg" alt="Memory 4">
                     </div>
-                    <div class="gallery-item-back" contenteditable="true">[Placeholder: Edit this text to describe Memory 4. For example: Our cozy movie night at home.]</div>
+                    <div class="gallery-item-back" contenteditable="true">[Ang layo netong staycation na to pero sulit, kantutan sa balcony tapos kakain ng kare-kare!]</div>
                 </div>
             </div>
             <div class="gallery-item">
@@ -265,7 +265,7 @@
                     <div class="gallery-item-front">
                         <img src="5th.jpg" alt="Memory 5">
                     </div>
-                    <div class="gallery-item-back" contenteditable="true">[Placeholder: Edit this text to describe Memory 5. For example: Hiking that mountain trail, hand in hand.]</div>
+                    <div class="gallery-item-back" contenteditable="true">[Galit sya nyan kase di ko daw inistory, ganda mo jan atecoooo hays I LOVE YOU!]</div>
                 </div>
             </div>
         </div>
@@ -305,4 +305,5 @@
     </script>
 </body>
 </html>
+
 
