--- a/index.html
+++ b/index.html
@@ -218,10 +218,15 @@
     <!-- Message Section -->
     <section id="message" class="container message">
         <h2>A Heartfelt Message</h2>
-        <p>Dear [Girlfriend's Name],<br><br>
-        [Placeholder text: Replace this with your heartfelt love letter. For example: From the moment we met, my life has been filled with joy and love. These two years have been the best of my life, and I can't wait to create more memories together. You are my everything, and I love you more than words can say.]<br><br>
-        Forever yours,<br>
-        [Your Name]</p>
+        <p>Hello Beng,<br><br>
+        I just want to give thanks sa'yo syempre kase tangina hindi ko naman expect na aabot tayo ng 2 years and counting. Tho I'm still hoping na tumagal and mag last na tong relationship ko ngayon. There's a misunderstanding and shits happened, pero ganon talaga ang buhay hindi stable para tayong nag sasail lang sa dagat. May mga challenges, but after that challenges we grow. We acknowledge our wrong doings and comeback stronger kagaya ni Luffy.
+
+I have a lot of plans ahead and yeah kasama ka dun, I appreciate all your efforts mapa small o big man yan. Kupal lang ako minsan na kunware sinasabi ko wala ka ambag sa buhay ko pero putangina ang laki mong epekto. MALAKING IPIKTO talaga like legit mas naging mautak na ko sa mga wordings and sa mararamdaman ng partner ko which is hindi ko pinapractice before, Thank you for staying, thank you sa pag tityaga na dibdibin yon hahaha I hope hindi na tayo umabot ulit sa mga ganon. O kung umabot man magkaintindihan pa rin hehe
+
+I'm just clutching this up kase taena ang onti nalang ng oras ko ngayong gabi pero gusto kita makasama habang buhay beng, sana hindi ka magsawa saken, sana di mo ko pag palit kahit zero days ko ngayon. Paldo naman ako sa dec hayaan mo bawi ako HAHAHA Ikaw unang makakalasap non HAHAHA Mahal na mahal kita Salamat at pahabain pa natin ang pasensya ang pagmamahal at kusang susunod ang pag haba ng buhay at ng relasyon natin. I love you so much my bengkong. 
+            
+            Forever yours,<br>
+        Darius</p>
     </section>
 
     <!-- Photo Gallery Section -->
@@ -305,5 +310,6 @@
     </script>
 </body>
 </html>
+
 
 
