--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ I'm just clutching this up kase taena ang onti nalang ng oras ko ngayong gabi pe
                     <div class="gallery-item-front">
                         <img src="777777777.jpg" alt="Memory 1">
                     </div>
-                    <div class="gallery-item-back" contenteditable="true">[Naks, 2nd time na pumunta sa iskol na kunware mag kaklase? pero nag iiyotan HAHAHA]</div>
+                    <div class="gallery-item-back" contenteditable="true">Naks, 2nd time na pumunta sa iskol na kunware mag kaklase? pero nag iiyotan HAHAHA</div>
                 </div>
             </div>
             <div class="gallery-item">
@@ -246,7 +246,7 @@ I'm just clutching this up kase taena ang onti nalang ng oras ko ngayong gabi pe
                     <div class="gallery-item-front">
                         <img src="2nd.jpg" alt="Memory 2">
                     </div>
-                    <div class="gallery-item-back" contenteditable="true">[Ukay When? Ganda mo jan kahit maghapon mo lang bitbit yang bulaklak HAHA]</div>
+                    <div class="gallery-item-back" contenteditable="true">Ukay When? Ganda mo jan kahit maghapon mo lang bitbit yang bulaklak HAHA</div>
                 </div>
             </div>
             <div class="gallery-item">
@@ -254,7 +254,7 @@ I'm just clutching this up kase taena ang onti nalang ng oras ko ngayong gabi pe
                     <div class="gallery-item-front">
                         <img src="3rd.jpg" alt="Memory 3">
                     </div>
-                    <div class="gallery-item-back" contenteditable="true">[First Sambokojin experience na busog sa discount busog din ang tiyan, UULITIN PO!]</div>
+                    <div class="gallery-item-back" contenteditable="true">First Sambokojin experience na busog sa discount busog din ang tiyan, UULITIN PO!</div>
                 </div>
             </div>
             <div class="gallery-item">
@@ -262,7 +262,7 @@ I'm just clutching this up kase taena ang onti nalang ng oras ko ngayong gabi pe
                     <div class="gallery-item-front">
                         <img src="4th.jpg" alt="Memory 4">
                     </div>
-                    <div class="gallery-item-back" contenteditable="true">[Ang layo netong staycation na to pero sulit, kantutan sa balcony tapos kakain ng kare-kare!]</div>
+                    <div class="gallery-item-back" contenteditable="true">Ang layo netong staycation na to pero sulit, kantutan sa balcony tapos kakain ng kare-kare!</div>
                 </div>
             </div>
             <div class="gallery-item">
@@ -270,7 +270,7 @@ I'm just clutching this up kase taena ang onti nalang ng oras ko ngayong gabi pe
                     <div class="gallery-item-front">
                         <img src="5th.jpg" alt="Memory 5">
                     </div>
-                    <div class="gallery-item-back" contenteditable="true">[Galit sya nyan kase di ko daw inistory, ganda mo jan atecoooo hays I LOVE YOU!]</div>
+                    <div class="gallery-item-back" contenteditable="true">Galit sya nyan kase di ko daw inistory, ganda mo jan atecoooo hays I LOVE YOU!</div>
                 </div>
             </div>
         </div>
@@ -310,6 +310,7 @@ I'm just clutching this up kase taena ang onti nalang ng oras ko ngayong gabi pe
     </script>
 </body>
 </html>
+
 
 
 
