--- a/index.html
+++ b/index.html
@@ -221,10 +221,13 @@
         <p>Hello Beng,<br><br>
         I just want to give thanks sa'yo syempre kase tangina hindi ko naman expect na aabot tayo ng 2 years and counting. Tho I'm still hoping na tumagal and mag last na tong relationship ko ngayon. There's a misunderstanding and shits happened, pero ganon talaga ang buhay hindi stable para tayong nag sasail lang sa dagat. May mga challenges, but after that challenges we grow. We acknowledge our wrong doings and comeback stronger kagaya ni Luffy.
 <br>
+            <br>
 I have a lot of plans ahead and yeah kasama ka dun, I appreciate all your efforts mapa small o big man yan. Kupal lang ako minsan na kunware sinasabi ko wala ka ambag sa buhay ko pero putangina ang laki mong epekto. MALAKING IPIKTO talaga like legit mas naging mautak na ko sa mga wordings and sa mararamdaman ng partner ko which is hindi ko pinapractice before, Thank you for staying, thank you sa pag tityaga na dibdibin yon hahaha I hope hindi na tayo umabot ulit sa mga ganon. O kung umabot man magkaintindihan pa rin hehe
 <br>
+            <br>
 I'm just clutching this up kase taena ang onti nalang ng oras ko ngayong gabi pero gusto kita makasama habang buhay beng, sana hindi ka magsawa saken, sana di mo ko pag palit kahit zero days ko ngayon. Paldo naman ako sa dec hayaan mo bawi ako HAHAHA Ikaw unang makakalasap non HAHAHA Mahal na mahal kita Salamat at pahabain pa natin ang pasensya ang pagmamahal at kusang susunod ang pag haba ng buhay at ng relasyon natin. I love you so much my bengkong. 
 <br>
+            <br>
             Forever yours,<br>
         Darius</p>
     </section>
@@ -238,7 +241,7 @@ I'm just clutching this up kase taena ang onti nalang ng oras ko ngayong gabi pe
                     <div class="gallery-item-front">
                         <img src="777777777.jpg" alt="Memory 1">
                     </div>
-                    <div class="gallery-item-back" contenteditable="true">Naks, 2nd time na pumunta sa iskol na kunware mag kaklase? pero nag iiyotan HAHAHA</div>
+                    <div class="gallery-item-back" contenteditable="false">Naks, 2nd time na pumunta sa iskol na kunware mag kaklase? pero nag iiyotan HAHAHA</div>
                 </div>
             </div>
             <div class="gallery-item">
@@ -246,7 +249,7 @@ I'm just clutching this up kase taena ang onti nalang ng oras ko ngayong gabi pe
                     <div class="gallery-item-front">
                         <img src="2nd.jpg" alt="Memory 2">
                     </div>
-                    <div class="gallery-item-back" contenteditable="true">Ukay When? Ganda mo jan kahit maghapon mo lang bitbit yang bulaklak HAHA</div>
+                    <div class="gallery-item-back" contenteditable="false">Ukay When? Ganda mo jan kahit maghapon mo lang bitbit yang bulaklak HAHA</div>
                 </div>
             </div>
             <div class="gallery-item">
@@ -254,7 +257,7 @@ I'm just clutching this up kase taena ang onti nalang ng oras ko ngayong gabi pe
                     <div class="gallery-item-front">
                         <img src="3rd.jpg" alt="Memory 3">
                     </div>
-                    <div class="gallery-item-back" contenteditable="true">First Sambokojin experience na busog sa discount busog din ang tiyan, UULITIN PO!</div>
+                    <div class="gallery-item-back" contenteditable="false">First Sambokojin experience na busog sa discount busog din ang tiyan, UULITIN PO!</div>
                 </div>
             </div>
             <div class="gallery-item">
@@ -262,7 +265,7 @@ I'm just clutching this up kase taena ang onti nalang ng oras ko ngayong gabi pe
                     <div class="gallery-item-front">
                         <img src="4th.jpg" alt="Memory 4">
                     </div>
-                    <div class="gallery-item-back" contenteditable="true">Ang layo netong staycation na to pero sulit, kantutan sa balcony tapos kakain ng kare-kare!</div>
+                    <div class="gallery-item-back" contenteditable="false">Ang layo netong staycation na to pero sulit, kantutan sa balcony tapos kakain ng kare-kare!</div>
                 </div>
             </div>
             <div class="gallery-item">
@@ -270,7 +273,7 @@ I'm just clutching this up kase taena ang onti nalang ng oras ko ngayong gabi pe
                     <div class="gallery-item-front">
                         <img src="5th.jpg" alt="Memory 5">
                     </div>
-                    <div class="gallery-item-back" contenteditable="true">Galit sya nyan kase di ko daw inistory, ganda mo jan atecoooo hays I LOVE YOU!</div>
+                    <div class="gallery-item-back" contenteditable="false">Galit sya nyan kase di ko daw inistory, ganda mo jan atecoooo hays I LOVE YOU!</div>
                 </div>
             </div>
         </div>
@@ -310,6 +313,7 @@ I'm just clutching this up kase taena ang onti nalang ng oras ko ngayong gabi pe
     </script>
 </body>
 </html>
+
 
 
 
